test/should_pass/basic_012.grg
actions basic_012;

rule r {
	pattern {
		x : Node;
	}
	replace {
		y : Node;
	}
}

